--- a/style.css
+++ b/style.css
@@ -1,41 +1,86 @@
-/* .body{
-    background-image: linear-gradient(to right,rgb(238, 192, 240),rgb(188, 241, 237));
-} */
+
 /* adding background to body */
-#grad{
-    background-image: linear-gradient(to left,rgb(168, 243, 171),white , rgb(243, 210, 166));
-    
-}
-.header{
-       /* border: solid ; */
+#grad {
+    background-image: linear-gradient(
+      to left,
+      rgb(168, 243, 171),
+      white,
+      rgb(243, 210, 166)
+      
+    );
+  }
+  .header {
+  
     text-align: center;
     
     display: flex;
-       
+   
+  
     border-radius: 6px;
-    height: 40px;
-    width: 100%;
-    background-image: linear-gradient(to right,rgb(231, 177, 105),rgb(66, 202, 127))
-}
-#profile{
-    /* border: solid rgb(2, 2, 2) 1px; */
+    height: 50px;
+    width:100%;
+    background-image: linear-gradient(
+      to right,
+      rgb(231, 177, 105),
+      rgb(66, 202, 127)
+    );
+  }
+  #profile {
+    
     border-radius: 50%;
     height: 30px;
     width: 30px;
-    /* background-image: image("profile.png"); */
+   
     margin-left: 5px;
     align-self: center;
+  
+    background: yellow url("profile.png") no-repeat center;
+  }
+  #name {
+  width: 85%;
+  
+    align-self: center;
+   
+  }
+  #menu_bar{
+      width: 10%;
+      margin-top: 6px;
+      display: flex;
+    height: 35px;
+    width: 35px;
     
-    background:  yellow url("profile.png") no-repeat center;
     
-}
-#name{
-    width: 450px;
-align-self: center;
-align-items: center;
-}
-#menu_bar{
-    height: 30px;
-    width: 30px;
-    border: solid black;
-}
+  }
+  #chat{
+      margin-left: 10px;
+      width: 10%;
+      margin-top: 10px;
+      height: 25px;
+      width: 25px;
+  }
+  .main_box{
+    justify-content: space-evenly;
+      display: flex;
+      flex-wrap: wrap;
+      margin-top: 60px;
+      border-radius: 5px;
+      background-color: rgba(255, 255, 255, 0.404);
+      height: 100%;
+      width: 100%;
+  }
+  .row{
+      display: flex;
+      justify-content: space-evenly;
+      flex-wrap: wrap;
+  }
+  
+  .sub-box{
+      border: solid rgba(0, 0, 0, 0.418) 2px;
+     height: 350px;
+     width: 350px;
+     border-radius: 5px;
+     margin: 80px 10px 80px 10px;
+    
+  }
+  
+  
